@@ -4,6 +4,26 @@
  * This file is (mostly) automatically generated from tclOO.decls.
  */
 
+#ifndef _TCLOOINTDECLS
+#define _TCLOOINTDECLS
+
+#undef TCL_STORAGE_CLASS
+#ifdef BUILD_tcl
+#   define TCL_STORAGE_CLASS DLLEXPORT
+#else
+#   ifdef USE_TCL_STUBS
+#      define TCL_STORAGE_CLASS
+#   else
+#      define TCL_STORAGE_CLASS DLLIMPORT
+#   endif
+#endif
+
+/*
+ * WARNING: This file is automatically generated by the tools/genStubs.tcl
+ * script.  Any modifications to the function declarations below should be made
+ * in the generic/tcl.decls script.
+ */
+
 /* !BEGIN!: Do not edit below this line. */
 
 /*
@@ -242,3 +262,8 @@ struct TclOOStubAPI {
     CONST TclOOStubs *stubsPtr;
     CONST TclOOIntStubs *intStubsPtr;
 };
+
+#undef TCL_STORAGE_CLASS
+#define TCL_STORAGE_CLASS DLLIMPORT
+
+#endif /* _TCLOODECLS */
